# knowledge-commons-tools

./: .env.tpl  .gitignore  CHANGELOG.md  LICENSE  README.md  ecs_utils.py  get_all_ips.py  get_ip.py  install.sh  pyproject.toml  setup_aws_profile.sh  sync_now.sh  sync_ssh.py  toggle-alb-rule.sh  uninstall.sh
docs/: ssh-sync.md
systemd/: sync-ssh-ecs.service  sync-ssh-ecs.timer
tests/: test_ecs_utils.py  test_sync_ssh.py
