[project]
name = "tools"
version = "1.0.0"
description = "MESH Research Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.16",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.commitizen]
version = "1.0.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
